--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,26 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
 	font-weight: 400;
-	background-color: #242424;
-	color: white;
+	background-color: white;
+	color: black;
+}
+
+h1 h2 h3 h4 {
+	margin: 0;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+	transition: 0.4s;
+}
+
+ul li,
+ol li {
+	list-style: none;
+}
+
+img {
+	max-width: 100%;
+	max-height: 100%;
 }
