--- a/src/style/headline.scss
+++ b/src/style/headline.scss
@@ -1,3 +1,9 @@
+.headline {
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+}
+
 .headline__container {
 	display: flex;
 	align-items: center;
@@ -22,6 +28,7 @@
 		font-size: 16px;
 		color: rgb(150, 150, 150);
 		margin-bottom: 30px;
+		height: 38px;
 	}
 
 	.headline__social {
