--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 
+html {
+	scroll-behavior: smooth;
+}
+
 * {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
-
 body {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
