--- a/src/style/contact.scss
+++ b/src/style/contact.scss
@@ -19,31 +19,10 @@
 	}
 }
 
-.contact__content {
-	margin: 70px 0 0 20px;
+.contact__content__list {
 	display: flex;
 	align-items: center;
-	gap: 25px;
-}
-
-.contact__content__img {
-	width: 50px;
-}
-
-.contact__mail__name {
-	margin-top: 10px;
-	color: $grey;
-}
-
-.contact__mail__copy {
-	background-color: inherit;
-	border: none;
-	padding: 5px;
-	border-radius: 20px;
-	transition: 0.4s;
-	cursor: pointer;
-
-	&:hover {
-		background-color: rgb(209, 208, 208);
-	}
+	gap: 50px;
+	justify-content: center;
+	margin-bottom: 150px;
 }
