--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -10,13 +10,13 @@
 .about__main {
 	display: flex;
 	gap: 80px;
-
+	flex-wrap: wrap;
 	.about__img {
 		width: 450px;
 		border-radius: 20px;
 	}
 	.about__content {
-		width: 550px;
+		max-width: 550px;
 		.about__subTitle {
 			font-size: 16px;
 			color: $blue;
@@ -33,5 +33,28 @@
 			color: $grey;
 			line-height: 1.5;
 		}
+	}
+}
+
+@media (max-width: 1127px) {
+	.about {
+		margin: 50px 0 20px 0;
+		height: auto;
+	}
+	.about__main {
+		margin: 0 10px;
+		padding: 0 5px;
+		justify-content: center;
+		gap: 30px;
+	}
+	.about__content {
+		text-align: center;
+	}
+	.about__img {
+		order: 1;
+	}
+
+	.about__main {
+		order: 2;
 	}
 }
