--- a/src/style/contactCard.scss
+++ b/src/style/contactCard.scss
@@ -29,3 +29,12 @@
 		background-color: rgb(209, 208, 208);
 	}
 }
+
+@media (max-width: 1127px) {
+	.contact__content {
+		margin: 0;
+	}
+	.contact__mail__name {
+		font-size: 10px;
+	}
+}
