--- a/src/style/headLineList.scss
+++ b/src/style/headLineList.scss
@@ -2,6 +2,8 @@
 	display: flex;
 	gap: 80px;
 	align-items: center;
+	flex-wrap: wrap;
+
 	.headline__stack-title {
 		font-size: 20px;
 		padding-right: 15px;
@@ -10,9 +12,24 @@
 	.headline__stack-list {
 		display: flex;
 		gap: 50px;
+		flex-wrap: wrap;
 		.headline__stack-img {
 			width: 40px;
 			height: 40px;
 		}
+	}
+}
+
+@media (max-width: 1127px) {
+	.headline__stack {
+		justify-content: center;
+		gap: 20px;
+		.headline__stack-title {
+			border-right: none;
+		}
+	}
+
+	.headline__stack-list {
+		justify-content: center;
 	}
 }
