--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -11,6 +11,7 @@ header {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		flex-wrap: wrap;
 	}
 	.header__list {
 		display: flex;
@@ -19,5 +20,15 @@ header {
 		li:hover {
 			color: rgb(122, 122, 122);
 		}
+	}
+}
+
+@media (max-width: 592px) {
+	.header__main {
+		justify-content: center !important;
+		text-align: center;
+	}
+	.header__logo {
+		margin-bottom: 10px;
 	}
 }
