--- a/src/style/headLineList.scss
+++ b/src/style/headLineList.scss
@@ -23,6 +23,8 @@
 @media (max-width: 1127px) {
 	.headline__stack {
 		justify-content: center;
+		margin: 0 10px;
+		padding: 0 5px;
 		gap: 20px;
 		.headline__stack-title {
 			border-right: none;
