--- a/src/style/headline.scss
+++ b/src/style/headline.scss
@@ -13,9 +13,12 @@
 	gap: 80px;
 	margin: 200px 0 130px 0;
 	.headline__total_img {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		width: 300px;
 		height: 300px;
-		background-color: aqua;
+
 		border-radius: 20px;
 	}
 }
