--- a/src/index.scss
+++ b/src/index.scss
@@ -36,3 +36,11 @@ img {
 	max-width: 100%;
 	max-height: 100%;
 }
+
+button {
+	transition: 0.4s;
+	outline: none;
+	cursor: pointer;
+	background-color: transparent;
+	font-family: 'Montserrat', sans-serif;
+}
