--- a/src/style/projectCard.scss
+++ b/src/style/projectCard.scss
@@ -45,13 +45,21 @@
 	}
 
 	.projectCard__url {
+		border-radius: 10px;
+		border: 2px solid rgb(218, 218, 218);
 		display: flex;
-		justify-content: center;
+		margin: 0 auto;
 		align-items: center;
 		gap: 10px;
 		font-weight: bold;
+		padding: 5px 10px;
+		font-size: 15px;
 		img {
 			width: 30px;
+		}
+
+		&:hover {
+			background-color: rgb(209, 208, 208);
 		}
 	}
 }
